# nu_plugin_cloud

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  rust-toolchain.toml
nix/modules/: devshell.nix  rust.nix
src/: aws.rs  cache.rs  lib.rs  ls.rs  main.rs  open.rs  save.rs  stub.rs
src/command/: clear.rs  ls.rs  mod.rs  open.rs  rm.rs  save.rs  stub.rs
src/providers/: aws.rs  local.rs  mem.rs  mod.rs
