[package]
name = "nu_plugin_cloud"
authors = ["Jack Wright"]
description = "A nushell plugin for working with cloud storage services"
repository = "https://github.com/ayax79/nu_plugin_cloud"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
async-lock = "3.4.0"
aws-config = { version = "1.5", features = ["sso"] }
aws-credential-types = "1.2"
bytes = "1.7"
env_logger = "0.11"
futures = "0.3"
itertools = "0.13.0"
log = "0.4"
mimalloc = "0.1.42"
mime_guess = "2.0.5"
nu-command = { version = "0.98", features = ["plugin"] }
nu-plugin = "0.98"
nu-protocol = { version = "0.98", features = ["plugin"] }
object_store = { version = "0.11", features = ["aws"] }
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
nu-plugin-test-support = "0.98"
nu-command = "0.98"
