[package]
name = "nu_plugin_cloud"
authors = ["Jack Wright"]
description = "A nushell plugin for working with cloud storage services"
repository = "https://github.com/ayax79/nu_plugin_cloud"
version = "0.2.11+0.110.0"
license = "MIT"
edition = "2024"

[dependencies]
async-lock = "3.4.0"
aws-config = { version = "1.8", features = ["sso"] }
aws-credential-types = "1.2"
bytes = "1.10"
env_logger = "0.11"
futures = "0.3"
itertools = "0.14.0"
log = "0.4"
mimalloc = "0.1.42"
mime_guess = "2.0.5"
nu-command = { version = "0.110", features = ["plugin"] }
nu-plugin = "0.110"
nu-protocol = { version = "0.110", features = ["plugin"] }
object_store = { version = "0.13", features = ["aws"] }
tokio = { version = "1.44", features = ["full"] }
url = "2.5"

[dev-dependencies]
nu-plugin-test-support = "0.110"
nu-command = "0.110"
